# image-processing-in-cpp

Week1/: CMakeLists.txt
Week1/week1/: image.hpp  niftiio.hpp  week1.cpp  week1.project
final assignment/: CMakeLists.txt  GPT version  GPT.cpp  main.cpp
week 3/: CMakeLists.txt  image.hpp  image_original.hpp  week3.cpp  week3.mk  week3.project  week3_original.cpp
week2/week2_Ex1/: compile_flags.txt  vector_week2.cpp  vector_week2.hpp  vector_week2.mk  vector_week2.project
week2/week2_Ex2/: CMakeLists.txt  Tools.cpp  Tools.hpp  bmpmini.hpp  image.hpp  main.cpp
week2/week2_Ex2/data/: brainT1.hdr
week4/: CMakeLists.txt  image.hpp  niftiio.hpp  week_mt.cpp  week_mt.mk  week_mt.project
week4/amipractical_data/Filter-lv12-lv6MaxCp/: brainT1_components.txt
week4/amipractical_data/Filter-lv16-lv8MaxCp/: brainT1_components.txt
week4/amipractical_data/Filter-lv20-lv10MaxCp/: brainT1_components.txt
week4/amipractical_data/Filter-lv8-lv4MaxCp/: brainT1_components.txt
week4/amipractical_data/noFilter-lv12-lv6MaxCp/: brainT1_components.txt
week4/amipractical_data/noFilter-lv16-lv8MaxCp/: brainT1_components.txt
week4/amipractical_data/noFilter-lv20-lv10MaxCp/: brainT1_components.txt
week4/amipractical_data/noFilter-lv8-lv4MaxCp/: brainT1_components.txt
week5/: CMakeLists.txt  bmpmini.hpp  image.hpp  week_ws.cpp
